# rispirit

./: CMakeLists.txt  main.cpp
MapInfo/: NPC.json  NextMap.json
States/: AudioHandler.h
States/Battlestate/: AI.h  Attacks.cpp  Attacks.h  BattleControlls.cpp  BattleControlls.h  Enemy.json  Units.cpp  Units.h
States/Inventory/: Inventory.cpp  Inventory.h  Items.h
States/Menu/: CharacterCreation.cpp  CharacterCreation.h  Extras.cpp  Extras.h  Load.cpp  Load.h  Menu.cpp  Menu.h  Pause.cpp  Pause.h  Save.cpp  Save.h  Saves.json  Settings.cpp  Settings.h
States/Overworld/: overworld.cpp  overworld.h  textbox.cpp  textbox.h
Themes/: Custom.txt
